# optrip-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: python-app.yml
scraper/: app.py  requirements.txt  scraper.py  turbus.example
scrapers/latam_scraper/: Dockerfile  app.py  app_latam.py  latam_scraper.py  requirements.txt  scraper_latam.py  test_latam_scraper.py  test_scraper_latam.py  utils_latam.py
scrapers/turbus_scraper/: Dockerfile  app.py  app_turbus.py  scraper.py  scraper_turbus.py  test_scraper_turbus.py  test_turbus_scraper.py  turbus_scraper.py  utils_turbus.py
src/: Dockerfile  __init__.py  app.py  requirements.txt  router.py  test_endpoints.py
src/config/: database.py  logging.py
src/controllers/complex_tests/: __init__.py  controller.py  schema.py
src/helpers/dates/: __init__.py  dates.py
src/models/: __init__.py  complex_test.py
src/routes/: __init__.py
src/routes/v1/: __init__.py  complex_test_route.py
src/services/scraper/: __init__.py  latam.example  latam.py  utils.py
src/static/css/: index.css
src/templates/: index.html
tests/: conftest.py
tests/routes/: test_landing.py
